can update quantities

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src='js/directives.js'></script>
     <script src='js/filters.js'></script>
     <script src='js/services.js'></script>
+    <script src='js/factories.js'></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
